# astock-data

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  pyproject.toml
.omo/run-continuation/: ses_127763b43ffeX0Kpcmk3Ggmg6m.json
astock_data/: AGENTS.md  __init__.py  api.py  cli.py  config.py  errors.py  market.py  resolver.py
astock_data/cache/: AGENTS.md  __init__.py  kline_csv.py  structured_sqlite.py
astock_data/clients/: AGENTS.md  __init__.py  eastmoney.py  sina.py  tdx.py  tencent.py
astock_data/formatters/: AGENTS.md  __init__.py  dispatch.py
astock_data/mcp/: AGENTS.md  server.py
astock_data/models/: AGENTS.md  __init__.py  base.py  fundamentals.py  market.py  news.py  signals.py
astock_data/services/: AGENTS.md  __init__.py  fundamentals.py  market_breadth.py  market_data.py  news.py  signals_a.py  signals_b.py
examples/: AGENTS.md  mcp_config.json  python_usage.py
skills/astock-data/: SKILL.md
tests/: AGENTS.md  conftest.py  test_agents_docs.py  test_cache_contract.py  test_cli.py  test_config.py  test_eastmoney_client.py  test_formatters.py  test_fundamentals_service.py  test_harness.py  test_market_breadth_service.py  test_market_data_service.py  test_market_validation.py  test_mcp_server.py  test_models.py  test_news_service.py  test_public_api.py  test_resolver_contract.py  test_signals_group_a.py  test_signals_group_b.py  test_sina_client.py  test_skill_docs.py  test_tdx_client.py  test_tencent_client.py  test_windows_paths.py
tests/fixtures/: AGENTS.md  README.md  eastmoney_datacenter.json  sina_financial_balance.json  sina_kline.json  (+4 more)
(+11 files in other folders)
